--- a/index.html
+++ b/index.html
@@ -652,8 +652,8 @@
         </div>
     </div>
 
-    <script src="js/recipes-data.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/app-simple.js"></script>
+    <!-- <script src="js/app.js"></script> DESHABILITADO TEMPORALMENTE -->
     <!-- Bootstrap JS (bundle includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <style>
